log/build_2021-10-31_15-09-07/ros2_intention_detector/stderr.log
  File "/home/wintermelon/dev_ws/src/ros2_intention_detector/install/ros2_intention_detector/lib/python3.8/site-packages/ros2_intention_detector/intention_subscriber_function.py", line 31
    Excute the action in the activity
           ^
SyntaxError: invalid syntax

